[package]
name = "wzium-library"
version = "0.0.3"
edition = "2021"
description = "This is simple wzium library in rust!"
license = "MIT"
homepage = "https://github.com/smaks6/wziumLibrary"

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
